# rust-k8s-grpc-metrics-example

./: README.md  client.yml  dashboard.json  foo.proto  grafana.yml  prometheus.yml  server.yml
client/: Cargo.toml  Dockerfile
client/src/: main.rs
server/: Cargo.toml  Dockerfile  build.rs
server/src/: main.rs
