[package]
name = "server"
version = "0.1.0"
authors = ["yukinarit <yukinarit84@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
config = "0.11"
serde = { version = "1", features = ["derive"] }
metrics = "0.17"
metrics-exporter-prometheus = "0.6"


[build-dependencies]
tonic-build = "0.6"
